--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <a target="_blank" href="https://www.youtube.com/watch?v=22O6Nmjt-mw"><button type="button" class="top-space btn btn-lg btn-outline-danger"><i class="far fa-money-bill-alt"></i> Donate to our Start-Up</button></a>
           </div>
           <div class="col-lg-6">
-            <img class="charlie-with-cat"
+            <img class="img-fluid charlie-with-cat"
               src="https://i.pinimg.com/600x315/e2/f0/01/e2f00158db2d371be13c1977325348e8.jpg"
               alt="a kitten wearing mittens"
             />
